css/game.css
body {
	margin: 0px;
	overflow: hidden;
}

#overlay {
	background: transparent;
	color: #ffffff;
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	z-index: 100;
	font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande',
		sans-serif;
	font-weight: 300;
}

#loader {
	background: #000000;
	display: flex;
	height: 100%;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

#loader h2 {
	margin: 0;
	padding: 0;
}

#coin-slot {
	position: absolute;
	top: 70px;
	right: 10px;
}

#coin-slot img {
	box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
}

.money-badge {
	float: left;
	margin: 1rem;
}

.money-badge img {
	height: 5rem;
}

.welcome {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background: #fff;
	box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
	border-radius: 4px;
	text-align: center;
	padding: 2rem 1.2rem;
	height: auto;
	width: 20rem;
	display: block;
	transition: all 1s linear;
	z-index: 600;
}

.welcome-title,
.welcome-subtitle {
	color: black;
	font-family: 'Open Sans', sans-serif;
}

.welcome-title {
	font-size: 24px;
	font-weight: bold;
}

.welcome-subtitle {
	fontsize: 22px;
}

.welcome-button {
	color: white;
	padding: 8px 24px;
	border-radius: 4px;
	font-weight: bold;
	background: linear-gradient(#93080e, #72080d);
	transition: background 0.3s ease;
	border: 1px solid #72080d;
	font-family: 'Open Sans', sans-serif;
	cursor: pointer;
}

#claimPrizeCTA {
	cursor: pointer;
	text-decoration: none;
}

a {
	cursor: pointer;
}

a:hover {
	cursor: pointer;
}

.welcome-button:hover {
	background: linear-gradient(#89070e, #68080c);
}

.mb {
	margin-bottom: 1rem;
}

.jumbotron {
	height: 12px;
	position: absolute;
	right: 10px;
	top: 36px;
	width: 120px;
	border-radius: 4px;
	margin: -20px 0 0 -100px;
}

.jumbotron p {
	margin: 4px 0;
}

.progress {
	display: flex;
	height: 1rem;
	overflow: hidden;
	font-size: 0.75rem;
	background-color: #e9ecef;
	border-radius: 0.25rem;
}

.progress-bar {
	display: flex;
	flex-direction: column;
	justify-content: center;
	overflow: hidden;
	color: #fff;
	text-align: center;
	white-space: nowrap;
	background: linear-gradient(to right, #b71921, #f06d06);
	transition: width 0.6s ease;
}

@keyframes load {
	0% {
		width: 2%;
	}
	10% {
		width: 10%;
	}
}

.hidden {
	display: none;
}

.visuallyhidden {
	opacity: 0;
}

.level {
	text-align: center;
	padding: 0.5rem 1rem;
	background-color: white;
	transition: all 1s linear;
	box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
	width: 15rem;
	margin: 1rem auto;
}

.level p {
	color: #000;
	font-family: 'Open Sans', sans-serif;
	font-weight: bold;
}

.pulse {
	animation: pulse 2s infinite;
}

@keyframes pulse {
	0% {
		transform: scale(0.97);
	}

	70% {
		transform: scale(1);
	}

	100% {
		transform: scale(0.97);
	}
}

.people-playing {
	background: linear-gradient(#8f6b29, #fde08d, #df9f28);
	border: #8f6b29 2px solid;
	padding: 1px;
	border-radius: 2px;
	text-align: center;
	width: 15rem;
	box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
	margin: 1rem auto;
}

.people-playing p {
	font-family: 'Open Sans', sans-serif;
	color: black;
	font-weight: bold;
}

#myProgress {
	width: 80%;
	margin: 0 auto;
	background-color: #ddd;
	border: 2px solid #4e4e4e;
	border-radius: 3px;
}

#loadingPanel {
	margin-bottom: 15px;
}

#myBar {
	width: 1%;
	height: 20px;
	background: linear-gradient(to right, #b71921, #f06d06);
}

.prize-banner {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background: #fff;
	box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
	border-radius: 4px;
	text-align: center;
	padding: 2rem 1.2rem;
	height: auto;
	width: 20rem;
	display: block;
	transition: all 1s linear;
	z-index: 700;
}

#countdown {
	font-size: 0.8rem;
	color: #93080e;
	border-radius: 4px;
	width: 64%;
	height: 10%;
	text-align: center;
	margin: 8px auto;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	transition: background 0.3s ease;
	border: 1px solid #72080d;
	padding: 0.2rem 4rem;
}

/* Media Queries */

@media only screen and (max-width: 414px) {
	#coin-slot {
		top: 58px;
		right: 10px;
	}

	#coin-slot img {
		height: 5.5rem;
	}

	.welcome {
		width: 19rem;
	}

	.people-playing {
		margin: 6rem;
		padding: 5px 10px;
	}

	.jumbotron {
		top: 27px;
		width: 77px;
	}
}

